syntax = "proto3";

package him;

option go_package = "service/service/im/gateway/protocol";

// 请求
message Request {
    Header Header = 1; // 请求头
    bytes Body = 2; // 请求体
}

// 请求类型
enum RequestType {
    RequestTypeUnknown = 0; // 未知
    RequestTypeSendMessage = 1; // 发送消息
}

// 请求版本
enum RequestVersion {
    RequestVersionUnknown = 0; // 未知
    RequestVersionArcane = 1; // 第一个版本
}

// 请求头
message Header {
    RequestType RequestType = 1; // 请求的类型
    RequestVersion RequestVersion = 2; // 请求的版本
    uint64 CorrelationID = 3; // 请求唯一标识
}

// 响应
message Response {
    uint64 CorrelationID = 1; // 请求唯一标识
    string Code = 2; // 错误码
    string Msg = 3; // 错误信息
    bytes Body = 4; // 响应体
}

// 消息类型
enum MessageType {
    MessageTypeUnknown = 0; // 未知
    MessageTypeText = 1; // 文字
    MessageTypeImage = 2; // 图片
}

// 接收者类型
enum ReceiverType {
    ReceiverTypeUnknown = 0; // 未知
    ReceiverTypeUser = 1; // 用户
    ReceiverTypeGroup = 2; // 群
}

// 接收者
message Receiver {
    ReceiverType Type = 1; // 接收者类型
    uint64 ReceiverID = 2; // 接收者编号
}

// 发送消息
message SendMessageRequest {
    MessageType Type = 1; // 消息类型
    Receiver Receiver = 2; // 接收者
    bytes Content = 3; // 消息内容
}

// 发送消息响应
message SendMessageResponse {
    uint64 MessageID = 1; // 消息编号
    uint64 sendTime = 2; // 发送时间
}



//        PullMsg
//
//        GetNewestSeq
//
//        PullMsgBySeqList